Implemented datePicker using a fragment, may keep but need to change it's functionality and the design of

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="activity_search">Search</string>
     <string name="searchable_hint">Enter location</string>
     <string name="title_activity_maps">Map</string>
+    <string name="datepicker">datePicker</string>
 </resources>
