Added sort icon and placed all sort options within

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="earthquake_date">Date</string>
     <string name="earthquake_details">Details</string>
     <string name="magnitude_symbol">M %s</string>
+    <string name="activity_search">Search</string>
+    <string name="action_date">Date</string>
+    <string name="action_sort">Sort</string>
     <string name="action_recent">Most Recent</string>
     <string name="action_Az">Sort A-z</string>
     <string name="action_magnitude">Sort Magnitude</string>
@@ -15,10 +18,8 @@
     <string name="action_east">Most Easterly</string>
     <string name="action_south">Most Southerly</string>
     <string name="action_west">Mostly Westerly</string>
-    <string name="action_date">Date</string>
     <string name="title_activity_search">Search Activity</string>
     <string name="title_activity_earthquake">Earthquake Activity</string>
-    <string name="activity_search">Search</string>
     <string name="searchable_hint">Enter location</string>
     <string name="title_activity_maps">Map</string>
     <string name="datepicker">datePicker</string>
