Navigation now working fully, making change to Earthwuake activity landscape view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EarthQuakr</string>
+    <string name="app_name">S1434184</string>
     <string name="id_student">S1434184</string>
     <string name="earthquake_location">Location</string>
     <string name="earthquake_magnitude">Magnitude</string>
