--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="earthquake_location">Location</string>
     <string name="earthquake_magnitude">Magnitude</string>
     <string name="earthquake_date">Date</string>
+    <string name="earthquake_depth">Depth</string>
+    <string name="earthquake_coordinates">Coordinates</string>
+    <string name="earthquake_link">Link</string>
     <string name="earthquake_details">Details</string>
     <string name="magnitude_symbol">M %s</string>
     <string name="activity_search">Search</string>
