Refactored package names and added in Name, StudentID, Programme of Study

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+//
+// Name                 Niklas Olsson
+// Student ID           S1434184
+// Programme of Study   Computing
+//
+-->
 <resources>
     <string name="app_name">S1434184</string>
     <string name="id_student">S1434184</string>
