--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,5 @@
     <string name="action_west">Mostly Westerly</string>
     <string name="title_activity_earthquake">Earthquake Activity</string>
     <string name="searchable_hint">Enter location</string>
-    <string name="datepicker">datePicker</string>
+    <string name="datepicker">Select date</string>
 </resources>
